--- a/Polkualgoritmien_vertailu/pom.xml
+++ b/Polkualgoritmien_vertailu/pom.xml
@@ -13,6 +13,33 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+                <version>3.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>Polkualgoritmien_vertailu.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>Polkualgoritmien_vertailu.*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
